# devcontainer-vscode

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/dat/: post-create-script.sh  post-start-script.sh  setup.sh
.devcontainer/dat/bashrc.d/: blesh  oh-my-bash  uv
.devcontainer/dat/tmp/: setup.sh
.devcontainer/dat/tmp/bashrc.d/: blesh  oh-my-bash  uv
